# Sistema_Crud_API_PIBIC/src/main/java/com/SistemaApiCrud/SistemaCrud/DTO/LoginResponseDTO.java
@@ -1,0 +1,21 @@
+package com.SistemaApiCrud.SistemaCrud.DTO;
+
+import java.time.Instant;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class LoginResponseDTO {
+
+    private String token;
+
+    private String tipo;
+
+    private Instant expiraEm;
+}
