# Sistema_Crud_API_PIBIC/src/main/java/com/SistemaApiCrud/SistemaCrud/DTO/usuario_response_DTO.java
@@ -1,0 +1,23 @@
+package com.SistemaApiCrud.SistemaCrud.DTO;
+
+import com.SistemaApiCrud.SistemaCrud.entity.enums.PapelUsuario;
+
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+public class usuario_response_DTO {
+
+    private Long id;
+
+    private String username;
+
+    private PapelUsuario role;
+
+    private Boolean ativo;
+}
